--- a/docs/content/docs/getting-started.mdx
+++ b/docs/content/docs/getting-started.mdx
@@ -1,4 +1,9 @@
-# Positron Quick Start Guide
+---
+title: Getting Started
+description: Get up and running with Positron in 5 minutes
+---
+
+# Getting Started
 
 Get up and running with Positron in 5 minutes!
 
@@ -28,9 +33,9 @@ Or manually install TkinterWeb with full features (including JavaScript):
 pip install tkinterweb[full]
 ```
 
-**Note:** 
-- The `[full]` extra includes JavaScript support via PythonMonkey, which is required for React apps
-- The `TkinterWeb/` folder in the repo is for reference only. Positron uses the TkinterWeb package from pip.
+<Callout type="info">
+The `[full]` extra includes JavaScript support via PythonMonkey, which is required for React apps. The `TkinterWeb/` folder in the repo is for reference only. Positron uses the TkinterWeb package from pip.
+</Callout>
 
 ## Run the Example App
 
@@ -232,13 +237,8 @@ win.load_file('dist/index.html')
 
 ## Learn More
 
-- [Full Documentation](README.md)
-- [API Reference](README.md#api-reference)
-- [Examples](examples/)
-
-## Need Help?
-
-- [GitHub Issues](https://github.com/yourusername/positron/issues)
-- [Discussions](https://github.com/yourusername/positron/discussions)
+- [Installation Guide](/docs/installation)
+- [API Reference](/docs/api/app)
+- [IPC Communication](/docs/api/ipc)
 
 Happy coding with Positron! 🚀
